--- a/src/scss/defaults.scss
+++ b/src/scss/defaults.scss
@@ -17,6 +17,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  border: none;
 
   color: map-get($colors, 'dark-grey');
   font-size: 18px;
@@ -25,36 +26,28 @@
   line-height: 150%;
 }
 
-h1,
-h2,
-h3,
-h4 {
+h1, h2, h3, h4 {
   text-transform: uppercase;
 }
 
 h1 {
   font-size: 60px;
-
   @include media.mobile { font-size: 30px; }
 }
 
 h2 {
   font-size: 38px;
-
   @include media.mobile { font-size: 18px; }
 }
 
 h3 {
   font-size: 24px;
-
   @include media.desktop { font-weight: normal; }
-
   @include media.mobile { font-size: 16px; }
 }
 
 h4 {
   font-size: 18px;
-
   @include media.mobile { font-size: 18px; }
 }
 
@@ -64,14 +57,11 @@ a {
   &:hover { cursor: pointer; }
 }
 
-input,
-button {
+input, button {
   color: inherit;
 }
 
-section,
-footer,
-header {
+section, footer, header {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -93,10 +83,7 @@ header {
 }
 
 .button {
-  border: 3px none;
-
   text-transform: capitalize;
-
   cursor: pointer;
 }
 
