--- a/src/scss/page-description.scss
+++ b/src/scss/page-description.scss
@@ -27,36 +27,31 @@
       width: 100%;
       margin-top: 16px;
     }
-
-    div {
+      
+    .form-inputs {
       display: flex;
-      gap: 34px;
-
+      gap: 24px;
       @include media.mobile { flex-direction: column; }
 
       input {
-        min-width: 270px;
-        min-height: 50px;
+        width: 273px;
+        @include media.mobile { width: 100%; }
+        height: 50px;
         border: 2px solid #cacaca;
-
-        border-radius: 3px;
 
         text-indent: 22.24px;
 
         ::placeholder {
-          color: map-get($colors, 'white');
-
+          color: white;
           opacity: 1;
         }
       }
     }
 
-    input[type=submit] {
+    .button {
       width: 100%;
       height: 57px;
       margin-top: 24px;
-
-      border: none;
     }
   }
 }
