--- a/src/scss/atomic.scss
+++ b/src/scss/atomic.scss
@@ -5,6 +5,7 @@ $font-sizes: 10, 16, 14, 13, 24, 32, 64, 30, 12, 18;
 @each $fs in $font-sizes {
   .fs-#{$fs} { font-size: #{$fs}px; }
 }
+.fs-12-8 { font-size: 12.8px; }
 
 @each $fs in $font-sizes {
   @include media.mobile { .fsm-#{$fs} { font-size: #{$fs}px; } }
