--- a/src/css/artist.css
+++ b/src/css/artist.css
@@ -103,7 +103,7 @@
   margin: 0;
   padding: 0;
   border: none;
-  font-size: 18px;
+  font-size: inherit;
   font-family: "Roboto", sans-serif;
   line-height: 150%;
 }
@@ -132,11 +132,7 @@ h2 {
 
 h3 {
   font-size: 24px;
-}
-@media (min-width: 1240px) {
-  h3 {
-    font-weight: normal;
-  }
+  font-weight: normal;
 }
 @media (max-width: 1239px) {
   h3 {
@@ -233,6 +229,10 @@ hr {
 
 .fs-18 {
   font-size: 18px;
+}
+
+.fs-12-8 {
+  font-size: 12.8px;
 }
 
 @media (max-width: 1239px) {
