--- a/src/scss/atomic.scss
+++ b/src/scss/atomic.scss
@@ -1,6 +1,6 @@
 @use 'media.scss' as media;
 
-$font-sizes: 10, 16, 14, 13, 24, 32, 64, 30, 12, 18;
+$font-sizes: 10, 11, 16, 14, 13, 24, 32, 64, 30, 12, 18;
 
 @each $fs in $font-sizes {
   .fs-#{$fs} { font-size: #{$fs}px; }
@@ -19,3 +19,5 @@ $border-radiuses: 3, 5;
 .text-center { text-align: center; }
 
 .lh-100 { line-height: 100%; }
+
+.w-100 { width: 100%; }
