--- a/src/css/index.css
+++ b/src/css/index.css
@@ -323,10 +323,6 @@ header {
 @media (max-width: 1239px) {
   header {
     top: 27px;
-    flex-direction: column;
-    gap: 18px;
-    align-items: initial;
-    justify-content: initial;
   }
 }
 header .header-container {
@@ -363,7 +359,7 @@ header .header-container .header-left .logo-group img {
   width: 24px;
   height: 24px;
 }
-header .header-container .header-left .site-name {
+header .header-container .header-left .logo-group .site-name {
   margin-left: 16px;
 }
 header .header-container .header-left .nav-group {
@@ -396,7 +392,6 @@ header .header-container input::placeholder {
 #page-description {
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: transparent;
   background-image: url("../images/banner.png");
   background-position: center;
   background-size: cover;
@@ -439,7 +434,7 @@ header .header-container input::placeholder {
     width: 100%;
   }
 }
-#page-description form .form-inputs input ::placeholder {
+#page-description form .form-inputs input::placeholder {
   color: white;
   opacity: 1;
 }
