--- a/src/css/index.css
+++ b/src/css/index.css
@@ -389,12 +389,15 @@ header .header-container input::placeholder {
   color: #757575;
 }
 
-#page-description {
-  padding-top: 200px;
-  padding-bottom: 200px;
+#page-description.background {
   background-image: url("../images/banner.png");
   background-position: center;
   background-size: cover;
+}
+
+#page-description {
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 #page-description .form-description {
   margin-top: 31px;
