--- a/src/css/index.css
+++ b/src/css/index.css
@@ -182,7 +182,7 @@ section, footer, header {
   }
 }
 
-.button {
+.btn {
   text-transform: capitalize;
   cursor: pointer;
 }
@@ -389,15 +389,12 @@ header .header-container input::placeholder {
   color: #757575;
 }
 
-.guitar-background {
-  background-image: url("../images/banner.png");
-  background-position: center;
-  background-size: cover;
-}
-
 #page-description {
   padding-top: 200px;
   padding-bottom: 200px;
+  background-image: url("../images/banner.png");
+  background-position: center;
+  background-size: cover;
 }
 #page-description .form-description {
   margin-top: 31px;
@@ -441,7 +438,7 @@ header .header-container input::placeholder {
   color: white;
   opacity: 1;
 }
-#page-description form .button {
+#page-description form .btn {
   width: 100%;
   height: 57px;
   margin-top: 24px;
@@ -495,7 +492,7 @@ header .header-container input::placeholder {
 #page-pricing .card .price span:nth-child(1) {
   margin-right: 1rem;
 }
-#page-pricing .card .button {
+#page-pricing .card .btn {
   width: 100%;
   height: 66px;
   border: 1px solid #fff;
@@ -582,7 +579,7 @@ header .header-container input::placeholder {
   max-width: 600px;
   margin-top: 16px;
 }
-#page-app .button {
+#page-app .btn {
   margin-top: 16px;
   padding-top: 16px;
   padding-right: 40px;
