--- a/src/scss/page-description.scss
+++ b/src/scss/page-description.scss
@@ -1,15 +1,13 @@
 @use 'media.scss' as media;
 @use 'colors.scss' as *;
 
-.guitar-background {
-  background-image: url('../images/banner.png');
-  background-position: center;
-  background-size: cover;
-}
-
 #page-description {
   padding-top: 200px;
   padding-bottom: 200px;
+
+  background-image: url('../images/banner.png');
+  background-position: center;
+  background-size: cover;
 
   .form-description {
     margin-top: 31px;
@@ -45,7 +43,7 @@
       }
     }
 
-    .button {
+    .btn {
       width: 100%;
       height: 57px;
       margin-top: 24px;
