--- a/src/scss/defaults.scss
+++ b/src/scss/defaults.scss
@@ -85,6 +85,11 @@ section, footer, header {
 .btn {
   text-transform: capitalize;
   cursor: pointer;
+
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 hr { width: 100%; }
