--- a/src/css/index.css
+++ b/src/css/index.css
@@ -185,6 +185,10 @@ section, footer, header {
 .btn {
   text-transform: capitalize;
   cursor: pointer;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 hr {
@@ -493,10 +497,7 @@ header .header-container input::placeholder {
   margin-right: 1rem;
 }
 #page-pricing .card .btn {
-  width: 100%;
-  height: 66px;
   border: 1px solid #fff;
-  background-color: transparent;
 }
 #page-pricing .card .description {
   margin-top: 64px;
