--- a/src/scss/page-pricing.scss
+++ b/src/scss/page-pricing.scss
@@ -46,14 +46,7 @@
       span:nth-child(1) { margin-right: 1rem; }
     }
 
-    .btn {
-      width: 100%;
-      height: 66px;
-
-      border: 1px solid #fff;
-
-      background-color: transparent;
-    }
+    .btn { border: 1px solid #fff; }
 
     .description {
       margin-top: 64px;
