--- a/src/scss/page-pricing.scss
+++ b/src/scss/page-pricing.scss
@@ -48,8 +48,6 @@
 
     .btn { border: 1px solid #fff; }
 
-    .description {
-      margin-top: 64px;
-    }
+    .description { margin-top: 64px; }
   }
 }
