--- a/src/scss/defaults.scss
+++ b/src/scss/defaults.scss
@@ -42,8 +42,9 @@ h2 {
 
 h3 {
   font-size: 24px;
-  font-weight: normal;
   @include media.mobile { font-size: 16px; }
+  font-weight: normal;
+  text-transform: capitalize;
 }
 
 h4 {
