--- a/src/css/artist.css
+++ b/src/css/artist.css
@@ -109,7 +109,7 @@
 }
 
 h1, h2, h3, h4 {
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 h1 {
@@ -587,3 +587,5 @@ footer .end-container {
     flex-direction: column;
   }
 }
+
+/*# sourceMappingURL=artist.css.map */
