--- a/src/css/index.css
+++ b/src/css/index.css
@@ -109,7 +109,7 @@
 }
 
 h1, h2, h3, h4 {
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
 
 h1 {
@@ -634,3 +634,5 @@ footer .end-container {
     flex-direction: column;
   }
 }
+
+/*# sourceMappingURL=index.css.map */
