--- a/src/css/index.css
+++ b/src/css/index.css
@@ -109,7 +109,7 @@
 }
 
 h1, h2, h3, h4 {
-  text-transform: capitalize;
+  text-transform: uppercase;
 }
 
 h1 {
@@ -133,6 +133,7 @@ h2 {
 h3 {
   font-size: 24px;
   font-weight: normal;
+  text-transform: capitalize;
 }
 @media (max-width: 1239px) {
   h3 {
@@ -211,7 +212,7 @@ hr {
   font-size: 14px;
 }
 
-.fs-12-8 {
+.fs-13 {
   font-size: 13px;
 }
 
@@ -634,5 +635,3 @@ footer .end-container {
     flex-direction: column;
   }
 }
-
-/*# sourceMappingURL=index.css.map */
