--- a/src/css/artist.css
+++ b/src/css/artist.css
@@ -133,7 +133,6 @@ h2 {
 h3 {
   font-size: 24px;
   font-weight: normal;
-  text-transform: capitalize;
 }
 @media (max-width: 1239px) {
   h3 {
@@ -317,6 +316,10 @@ hr {
 
 .w-100 {
   width: 100%;
+}
+
+.capitalize {
+  text-transform: capitalize;
 }
 
 header {
