--- a/src/css/index.css
+++ b/src/css/index.css
@@ -553,7 +553,7 @@ header .header-container input::placeholder {
   width: 19px;
   height: 19px;
 }
-#page-news button {
+#page-news .btn {
   margin-top: 48px;
   padding-top: 16px;
   padding-right: 30px;
