--- a/src/scss/artist/page-description.scss
+++ b/src/scss/artist/page-description.scss
@@ -37,12 +37,12 @@
       padding-top: 20px;
       padding-bottom: 20px;
 
+      text-transform: uppercase;
+
       img {
         width: 20px;
         height: 20px;
       }
-
-      p { text-transform: uppercase; }
     }
   }
 }
