--- a/src/scss/defaults.scss
+++ b/src/scss/defaults.scss
@@ -68,6 +68,10 @@ section, footer, header {
   align-items: center;
 }
 
+hr { width: 100%; }
+
+img { display: block; }
+
 .container {
   display: flex;
   flex-direction: column;
@@ -92,5 +96,3 @@ section, footer, header {
   padding-top: 20px;
   padding-bottom: 20px;
 }
-
-hr { width: 100%; }
