--- a/src/scss/artist/page-similar.scss
+++ b/src/scss/artist/page-similar.scss
@@ -2,7 +2,7 @@
 
 #page-similar {
   padding-top: 100px;
-  padding-bottom: 100px;
+  margin-bottom: 100px;
 
   .container {
     align-items: start;
