--- a/src/css/index.css
+++ b/src/css/index.css
@@ -108,6 +108,12 @@
   line-height: 150%;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 h1, h2, h3, h4 {
   text-transform: uppercase;
 }
@@ -179,15 +185,10 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 1240px;
+  padding-right: 20px;
+  padding-left: 20px;
   width: 100%;
-  max-width: 1200px;
-}
-@media (max-width: 1239px) {
-  .container {
-    width: calc(100% - 40px);
-    margin-right: 20px;
-    margin-left: 20px;
-  }
 }
 
 .btn {
@@ -511,7 +512,7 @@ header .header-container input::placeholder {
   margin-top: 64px;
 }
 
-#page-news .container {
+#page-news {
   margin-top: 100px;
 }
 #page-news .news-container {
@@ -572,7 +573,7 @@ header .header-container input::placeholder {
   border-radius: 5px;
 }
 
-#page-app .container {
+#page-app {
   margin-top: 100px;
   margin-bottom: 100px;
 }
