--- a/src/css/index.css
+++ b/src/css/index.css
@@ -167,12 +167,6 @@ input, button {
   color: inherit;
 }
 
-section, footer, header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 hr {
   width: 100%;
 }
@@ -332,60 +326,58 @@ header {
   top: 25px;
   right: 0;
   left: 0;
+  margin: auto;
+  justify-content: space-between;
+  row-gap: 18px;
+  flex-direction: row !important;
 }
 @media (max-width: 1239px) {
   header {
     top: 27px;
   }
 }
-header .header-container {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  row-gap: 18px;
-}
 @media (max-width: 1239px) {
-  header .header-container {
-    flex-direction: column;
+  header {
+    flex-direction: column !important;
   }
 }
-header .header-container .header-left {
+header .header-left {
   display: flex;
   column-gap: 90px;
   row-gap: 17px;
 }
 @media (min-width: 1240px) {
-  header .header-container .header-left {
+  header .header-left {
     align-items: center;
   }
 }
 @media (max-width: 1239px) {
-  header .header-container .header-left {
+  header .header-left {
     flex-direction: column;
   }
 }
-header .header-container .header-left .logo-group {
+header .header-left .logo-group {
   display: flex;
   align-items: center;
 }
-header .header-container .header-left .logo-group img {
+header .header-left .logo-group img {
   width: 24px;
   height: 24px;
 }
-header .header-container .header-left .logo-group .site-name {
+header .header-left .logo-group .site-name {
   margin-left: 16px;
 }
-header .header-container .header-left .nav-group {
+header .header-left .nav-group {
   display: flex;
   column-gap: 24px;
   row-gap: 3px;
 }
 @media (max-width: 1239px) {
-  header .header-container .header-left .nav-group {
+  header .header-left .nav-group {
     flex-direction: column;
   }
 }
-header .header-container input {
+header input {
   width: 248px;
   height: 25px;
   border: none;
@@ -394,12 +386,15 @@ header .header-container input {
   text-indent: 10px;
 }
 @media (max-width: 1239px) {
-  header .header-container input {
+  header input {
     width: 100%;
   }
 }
-header .header-container input::placeholder {
+header input::placeholder {
   color: #757575;
+}
+header .header-container {
+  width: 100%;
 }
 
 #page-description {
@@ -408,6 +403,9 @@ header .header-container input::placeholder {
   background-image: url("../images/banner.png");
   background-position: center;
   background-size: cover;
+}
+#page-description.container {
+  max-width: 100%;
 }
 #page-description .form-description {
   margin-top: 31px;
@@ -457,7 +455,7 @@ header .header-container input::placeholder {
   margin-top: 24px;
 }
 
-#page-pricing .container {
+#page-pricing {
   margin-top: 100px;
 }
 #page-pricing .card-container {
