--- a/src/scss/page-description.scss
+++ b/src/scss/page-description.scss
@@ -2,6 +2,7 @@
 @use 'colors.scss' as *;
 
 #page-description {
+  &.container { max-width: 100%; }
   padding-top: 200px;
   padding-bottom: 200px;
 
@@ -17,7 +18,6 @@
   form {
     max-width: 570px;
     margin-top: 17px;
-
     @include media.mobile {
       width: 100%;
       margin-top: 16px;
