--- a/src/css/artist.css
+++ b/src/css/artist.css
@@ -559,6 +559,9 @@ footer {
   padding-bottom: 2rem;
   background: linear-gradient(89.75deg, #5328a1 32.83%, #95390c 81.56%);
 }
+footer.container {
+  max-width: 100%;
+}
 footer .urls-container {
   display: flex;
   flex-grow: 1;
