--- a/src/css/artist.css
+++ b/src/css/artist.css
@@ -461,7 +461,6 @@ header .header-container {
 #page-popular-track .track-container .track-row {
   display: flex;
   row-gap: 25px;
-  column-gap: 50px;
 }
 @media (max-width: 1239px) {
   #page-popular-track .track-container .track-row {
@@ -473,6 +472,7 @@ header .header-container {
   align-items: center;
   flex-grow: 1;
   flex-basis: calc(50% - 50px);
+  margin-right: 50px;
 }
 #page-popular-track .track img {
   width: 55px;
@@ -590,6 +590,8 @@ footer .column .icons {
 footer hr {
   margin-top: 72px;
   margin-bottom: 40px;
+  height: 2px;
+  width: calc(100vw - 20px);
 }
 footer .end-container {
   display: flex;
