--- a/src/scss/artist/page-popular-track.scss
+++ b/src/scss/artist/page-popular-track.scss
@@ -18,18 +18,17 @@
     .track-row {
       display: flex;
       row-gap: 25px;
-      column-gap: 50px;
       @include media.mobile { flex-direction: column; }
     }
   }
-
-  
 
   .track {
     display: flex;
     align-items: center;
     flex-grow: 1;
     flex-basis: calc(50% - 50px);
+
+    margin-right: 50px;
 
     img {
       width: 55px;
