--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -33,6 +33,8 @@ footer {
   hr {
     margin-top: 72px;
     margin-bottom: 40px;
+    height: 2px;
+    width: calc(100vw - 20px);
   }
 
   .end-container {
