--- a/src/scss/artist/page-description.scss
+++ b/src/scss/artist/page-description.scss
@@ -12,13 +12,9 @@
   //@include media.mobile { padding-top: 250px; }
   padding-bottom: 200px;
 
-  .container {
-    align-items: start;
-  }
+  .container { align-items: start; }
   
-  .counter {
-    margin-top: 16px;
-  }
+  .counter { margin-top: 16px; }
 
   .btns {
     display: flex;
