--- a/src/scss/artist/page-description.scss
+++ b/src/scss/artist/page-description.scss
@@ -12,7 +12,8 @@
   //@include media.mobile { padding-top: 250px; }
   padding-bottom: 200px;
 
-  .container { 
+  .container {
+    padding: 0;
     margin-top: 50px;
     align-items: start; 
   }
