--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -5,7 +5,6 @@ header {
 
   position: absolute;
   top: 25px;
-  @include media.mobile { top: 27px; }
   right: 0;
   left: 0;
   margin: auto;
@@ -34,11 +33,17 @@ header {
       .site-name { margin-left: 16px; }
     }
     
-    .nav-group {
+    ul {
       display: flex;
       column-gap: 24px;
-      row-gap: 3px;
       @include media.mobile { flex-direction: column; }
+
+      list-style-type: none;
+      li {
+        margin-top: 3px;
+        margin-bottom: 3px;
+        a { line-height: 12.89px; }
+      }
     }
   }
   
@@ -54,11 +59,5 @@ header {
     @include media.mobile { width: 100%; }
 
     &::placeholder { color: #757575; }
-  }
-
-  .header-container {
-    width: 100%;
-
-    
   }
 }
