--- a/src/css/artist.css
+++ b/src/css/artist.css
@@ -380,11 +380,11 @@ header .header-left ul {
   }
 }
 header .header-left ul li {
-  margin-top: 1.5px;
-  margin-bottom: 1.5px;
+  padding-top: 1.5px;
+  padding-bottom: 1.5px;
 }
 header .header-left ul li a {
-  line-height: 12.89px;
+  line-height: 13px;
 }
 header input {
   width: 248px;
