--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -40,9 +40,9 @@ header {
 
       list-style-type: none;
       li {
-        margin-top: 1.5px;
-        margin-bottom: 1.5px;
-        a { line-height: 12.89px; }
+        padding-top: 1.5px;
+        padding-bottom: 1.5px;
+        a { line-height: 13px; }
       }
     }
   }
