--- a/src/css/artist.css
+++ b/src/css/artist.css
@@ -408,7 +408,8 @@ header input::placeholder {
   background-image: url("../images/Morten Harket.png");
   background-position: center;
   background-size: cover;
-  padding-top: 225px;
+  margin-top: 25px;
+  padding-top: 200px;
   padding-bottom: 200px;
 }
 #page-description.container {
