--- a/src/scss/artist/page-description.scss
+++ b/src/scss/artist/page-description.scss
@@ -8,7 +8,8 @@
   background-position: center;
   background-size: cover;
 
-  padding-top: 225px;
+  margin-top: 25px;
+  padding-top: 200px;
   //@include media.mobile { padding-top: 250px; }
   padding-bottom: 200px;
 
