--- a/src/css/index.css
+++ b/src/css/index.css
@@ -156,6 +156,7 @@ h4 {
 }
 
 a {
+  display: block;
   color: inherit;
   text-decoration: none;
 }
@@ -368,6 +369,9 @@ header .header-left .logo-group .site-name {
 header .header-left ul {
   display: flex;
   column-gap: 24px;
+  row-gap: 3px;
+  padding-top: 1px;
+  padding-bottom: 2px;
   list-style-type: none;
 }
 @media (max-width: 1239px) {
@@ -375,11 +379,7 @@ header .header-left ul {
     flex-direction: column;
   }
 }
-header .header-left ul li {
-  padding-top: 1.5px;
-  padding-bottom: 1.5px;
-}
-header .header-left ul li a {
+header .header-left ul a {
   line-height: 13px;
 }
 header input {
