--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -35,15 +35,15 @@ header {
     
     ul {
       display: flex;
-      column-gap: 24px;
       @include media.mobile { flex-direction: column; }
+      column-gap: 24px;
+      row-gap: 3px;
+      
+      padding-top: 1px;
+      padding-bottom: 2px;
 
       list-style-type: none;
-      li {
-        padding-top: 1.5px;
-        padding-bottom: 1.5px;
-        a { line-height: 13px; }
-      }
+      a { line-height: 13px; }
     }
   }
   
